# ChangeLog for app-arch/squeeze
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Jun 2008; Christoph Mende <angelos@gentoo.org> squeeze-9999.ebuild:
  Ebuild cleanup, removed stuff done by the eclass

  09 Jun 2008; Christoph Mende <angelos@gentoo.org> squeeze-9999.ebuild:
  Synced with the main tree

  20 Aug 2007; Christoph Mende <angelos@gentoo.org> squeeze-9999.ebuild,
  -squeeze-9999-r25827.ebuild:
  Upstream fixed trunk, removing old workarounds

  04 Aug 2007; Christoph Mende <angelos@gentoo.org>
  +squeeze-9999-r25827.ebuild:
  Added an ebuild for squeeze svn rev 25827

  04 Aug 2007; Christoph Mende <angelos@gentoo.org> squeeze-9999.ebuild:
  Warn the user that squeeze is currently not supposed to work

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
