@@ -1,13 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD squeeze-9999.ebuild 703 RMD160 8d270de8006cc93632b51a4807a4a875ef10266b SHA1 1e617f68274adac0de4f26daa2a787686a2587c7 SHA256 d98492d6ecf92ba5ae090d47dde377b33bba37f7e29e8e2f3f679c1813fa2b64
-MISC ChangeLog 847 RMD160 47b9889b7c30aabf7a37f1a5586fe68acd32d492 SHA1 84488ee94e1815e240f9e10fe09ea8d313496fbc SHA256 488438dbf96746660e0ad44ea31bab73cadac3ff86bd624c448334d53b61f932
+EBUILD squeeze-9999.ebuild 676 RMD160 80b3fb963ebdbf5234c449e5999c218c7d7f5fba SHA1 71439620bb14f0faabefc77198f837063d9dce13 SHA256 8200c3a3053fa481ce8cd40e0f90776242028b780ad0f459b7649633fffc0e88
+MISC ChangeLog 974 RMD160 2245eca0182307ed276594e66364b868be2f8bfc SHA1 3696b9a749971fb8912c7a7222f5e28b44ef5486 SHA256 67f8d9647802515306a68067aaca82bf6aa6ff79b32dea695536ad058a9baf0c
 MISC metadata.xml 402 RMD160 72bd8c4bed76340c095c8d5e35bc4a40659e214a SHA1 b43f37be1aad11ed575b80c1566c8ac6384bf6bf SHA256 809811d82e1bc110f7019d639d55263ac696ac3c3b39628e289228dd42128e7b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkWJFIACgkQKhnDs22gwa/O7gCg+EnCo8mjQSHZcihwLIxaGDJo
-Z78AoIvBKm3PGyqSGN3r/QxEftauGGEc
-=X6Pu
+iEYEARECAAYFAkkYmIYACgkQKhnDs22gwa87KgCfRfzEST7Zr8FDf84+McOkx5j3
+kSsAnjHj3UtzEsIv9roRYKz4buoh9Z5w
+=TiJs
 -----END PGP SIGNATURE-----
